convert clip and clipevent classes to records